# mortar

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  CMakeSettings.json  README.md  shadertoolsconfig.json
dep/: CMakeLists.txt  USD_build_cmd.txt
src/: CMakeLists.txt  assetbrowserquick.h  assetmanager.h  engine_setting.h  gpu_profiler.h  main.cpp  mainloop.h  mainloop.ixx  mortar.vcxproj  mortar.vcxproj.filters  per_flight_resource.h  per_swap_resource.h  profiler.h  scene.h  scene_graph.h  scene_resource.h
src/app_shader_shared/: emitter.glsl.h  shared.glsl.h
src/application/: per_swap_resource.h  scene_resource.h
src/application/render/: render_context.h  renderer.h  shader_path.h
src/common/: bluenoise.h  camera.h  envmap.h  file.h  glfwhandler.h  logger.h  mortar.h  scene.h  stopwatch.h  trace.h  trimesh.h  uniquehandle.h  vmath.h
src/common/stb/: stbimage.cpp
src/common/ste/: stevector.h
src/core/: camera.h  camera.ixx  file.h  file.ixx  glfwhandler.h  gui_event_coordinator.h  logger.h  noncopyable.h  stopwatch.h  stopwatch.ixx  trace.h  trace.ixx  uniquehandle.h  uniquehandle.ixx  vmath.h  vmath.ixx
src/core/ste/: stevector.h  stevector.ixx
src/gavulkan/: appcore.h  buffer.h  descriptor.h  graphicspipeline.h  image.h  raytracingaccel.h  raytracingpipeline.h  shader.h
src/graphicsapi/: enums.h  graphicsapi.h  setting.h  shadersrc.h
src/graphicsapi/commontypes/: gpcopyregion.h  gpshadersrc.h
src/graphicsapi/dxa/: dxa.h  dxabuffer.h  dxacommandlist.h  dxacommandpool.h  dxacommon.h  dxadescriptor.h  dxadescriptorpool.h  dxadevice.h  dxaentry.h  dxafence.h  dxaflightcontrol.h  dxaframebufferbinding.h  dxaimguirenderpass.h  dxamaterialsystem.h  dxarasterpipeline.h  dxaraytracingaccel.h  dxaraytracingpipeline.h  dxasampler.h  dxasemaphore.h  dxastagingbuffermanager.h  dxaswapchain.h  dxatexture.h  dxilreflection.h
src/graphicsapi/gpcommontypes/: enums.h  setting.h
src/graphicsapi/shadercompiler/: hlsld3dcompiler.h  hlsldxccompiler.h
src/graphicsapi/shaderintrospect/: glslcompiler.h  spirvreflection.h
src/graphicsapi/vka/: spirvreflection.h  vka.h  vkabuffer.h  vkacommandlist.h  vkacommandpool.h  vkacommon.cpp  vkacommon.h  vkadescriptor.h  vkadescriptorpool.h  vkadevice.h  vkaentry.h  vkafence.h  vkaframebufferbinding.h  vkaimguirenderpass.h  vkarasterpipeline.h  vkaraytracingaccel.h  vkaraytracingpipeline.h  vkasampler.h  vkasemaphore.h  vkastagingbuffermanager.h  vkaswapchain.h  vkatexture.h
src/importer/: ai_mesh_importer.h  ai_mesh_importer.ixx  img_importer.h  img_importer.ixx
src/loader/: img_loader.h
src/misc_app/: probeplacer_silvennoinen17.h  voxelizer.h
src/pch/: imgui_config.h  pch.h  vk_dispatch_loader_dynamic.cpp  vma.cpp
src/render/: assetmanager.h  render.h  render_context.h  render_context.ixx  rendercontext.h  renderer.h  shader_path.h
src/render/common/: color_conversion.h  compact_vertex.h  constant.h  engine_setting.h  render_params.h  shared.h  standard_emissive_ref.h  standard_material.h  standard_material_ref.h  standard_object_ref.h
src/render/passes/: final_composite.h  final_composite.ixx  gbuffer_generation.h  path_tracing.h  ray_trace_path_tracer.h  ray_trace_visualize.h  raytrace_visualize.h  raytrace_visualize.ixx
src/render/rng/: pcg.h
src/render/shared/: arealight.h  cameraparam.h  compactvertex.h  pbremissive.h  pbrmaterial.h  pbrobject.h
src/render/sharedsignature/: pbrmaterial.h  sharedvertex.h
src/renderer/: fastpathtracer.h  pathtracer.h  primpath.h  rtao.h
src/renderer_app/: pathtracer.h  rtao.h
src/rhi/: rhi.h  setting.h
src/rhi/common/: rhi_enums.h  rhi_shader_src.h  rhi_texture_create_info.h
src/rhi/commontypes/: rhicopyregion.ixx  rhienums.h  rhienums.ixx  rhishadersrc.h
src/rhi/dxa/: dxa.h  dxa_buffer.h  dxa_command_buffer.h  dxa_command_list.h  dxa_command_pool.h  dxa_commandlist.h  dxa_commandpool.h  dxa_common.h  dxa_constants.h  dxa_descriptor.h  dxa_descriptorpool.h  dxa_device.h  dxa_entry.h  dxa_fence.h  dxa_framebufferbinding.h  dxa_imgui_render_pass.h  dxa_query_pool.h  dxa_raster_pipeline.h  dxa_rasterpipeline.h  dxa_raytracing_accel.h  dxa_raytracing_pipeline.h  dxa_raytracingaccel.h  dxa_raytracingpipeline.h  dxa_sampler.h  dxa_semaphore.h  dxa_stagingbuffermanager.h  dxa_swapchain.h  dxa_texture.h  dxabuffer.h  dxabuffer.ixx  dxacommandlist.h  dxacommandlist.ixx  dxacommandpool.h  dxacommon.h  dxadescriptor.h  dxadescriptorpool.h  dxadevice.h  dxadevice.ixx  dxaentry.h  dxafence.h  (+16 more)
src/rhi/shadercompiler/: hlsldxccompiler.h  shader_binary_manager.h  shader_manager.h
src/rhi/vka/: spirv_reflection.h  spirvreflection.h  vka.h  vka_aliasable_memory.h  vka_buffer.h  vka_command_buffer.h  vka_command_list.h  vka_command_pool.h  vka_common.h  vka_constants.h  vka_descriptor.h  vka_descriptor_pool.h  vka_device.h  vka_entry.h  vka_fence.h  vka_framebuffer_binding.h  vka_imgui_render_pass.h  vka_query_pool.h  vka_raster_pipeline.h  vka_raytracing_accel.h  vka_raytracing_pipeline.h  vka_sampler.h  vka_semaphore.h  vka_stagingbuffermanager.h  vka_swapchain.h  vka_texture.h  vkabuffer.h  vkacommandlist.h  vkacommandpool.h  vkacommandpool.ixx  vkacommon.cpp  vkacommon.h  vkadescriptor.h  vkadescriptorpool.h  vkadevice.h  vkaentry.h  vkafence.h  vkaframebufferbinding.h  vkaimguirenderpass.h  vkarasterpipeline.h  (+9 more)
src/shaders/: beauty.hlsl  cpp_compatible.h  direct_light_restir.hlsl  direct_light_restir_params.h  gbuffer_generate_ray_trace.hlsl.h  gbuffer_generate_ray_trace_params.h  path_tracing.hlsl.h  path_tracing_params.h  ray_trace_gbuffer_generate.hlsl  ray_trace_gbuffer_generate_params.h  ray_trace_path_tracer.hlsl  ray_trace_path_tracer_params.h  ray_trace_visualize.hlsl  ray_trace_visualize_params.h  raytrace_visualize.hlsl  raytrace_visualize_params.h
src/shaders/common/: bluenoise.glsl  bsdf.glsl  color_conversion.h  constant.h  emittersample.glsl  mapping.glsl  mapping.h  material.glsl  math.glsl  onb.glsl  pcg.glsl  ray.glsl  raycommon.glsl  reservior.h  traceray.glsl
src/shaders/rng/: bluesobol.glsl  pcg.h
(+241 files in other folders)
